[project]
name = "gunicorn_worker_healthcheck"
description = "HTTP endpoint that counts ready gunicorn workers"

dependencies = []
optional-dependencies = {"test"=[
    "gunicorn",
    "pytest",
    "requests",
]}

authors = [{name="Zeit Online", email="zon-backend@zeit.de"}]
license = {text="BSD-3-Clause"}
urls = {repository="https://github.com/ZeitOnline/gunicorn_worker_healthcheck"}
requires-python = ">=3.7"

dynamic = ["version", "readme"]


[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["/bin", "/changelog"]

[tool.hatch.version]
path = "src/gunicorn_worker_healthcheck/__init__.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{path="README.md"}, {text="\n\n"}, {path="CHANGES.md"}]


[tool.hatch.envs.test]
features = ["test"]

[tool.pytest.ini_options]
addopts = "--tb=native"


[tool.hatch.envs.release]
skip-install = true
dependencies = ["towncrier"]

[tool.towncrier]
directory = "changelog/"
filename = "CHANGES.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
underlines = ["", ""]

[[tool.towncrier.type]]
directory = "change"
name = ""
showcontent = true